update url + login test

--- a/src/main/resources/ConfigurationFile/config.properties
+++ b/src/main/resources/ConfigurationFile/config.properties
@@ -1,5 +1,6 @@
-url=https://shopeefood.vn
+url=https://tutorialsninja.com/demo/
 browser=chrome
 PageLoadTimeOut=240
-username=chuoineba2k1@gmail.com
+username=chuoineba2k1@gmail.com 
 password=anhnam123
+product=Samsung SyncMaster 941BW
